test/fail_compilation/test21164.d
// REQUIRED_ARGS: -Iextra-files
import test21164a;
import test21164b;
auto GB(D!Q)
{
}
